--- a/.github/workflows/agent-governor.yml
+++ b/.github/workflows/agent-governor.yml
@@ -50,19 +50,13 @@ jobs:
       
       - name: Build project
         env:
-          MONGODB_URI: ${{ secrets.MONGODB_URI }}
-          NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
-          NEXTAUTH_URL: ${{ secrets.NEXTAUTH_URL }}
+          MONGODB_URI: ${{ secrets.MONGODB_URI || 'mongodb://localhost:27017/fixzit-ci-test' }}
+          NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET || 'ci-test-secret-key-min-32-chars-long-for-testing-must-be-32-chars' }}
+          NEXTAUTH_URL: ${{ secrets.NEXTAUTH_URL || 'http://localhost:3000' }}
           NEXT_PUBLIC_APP_URL: http://localhost:3000
           DISABLE_MONGODB_FOR_BUILD: "true"
           SKIP_ENV_VALIDATION: "true"
-        run: |
-          # Apply safe defaults if secrets are not provided
-          export MONGODB_URI="${MONGODB_URI:-mongodb://localhost:27017/fixzit-ci-test}"
-          export NEXTAUTH_SECRET="${NEXTAUTH_SECRET:-ci-test-secret-key-min-32-chars-long-for-testing}"
-          export NEXTAUTH_URL="${NEXTAUTH_URL:-http://localhost:3000}"
-          
-          pnpm run build
+        run: pnpm run build
         # CRITICAL: Removed continue-on-error - build failures must block PRs
 
       - name: Upload inventory artifacts
