fix(ci): Add permissions blocks to all workflows missing them
- Add permissions to: route-quality, duplicate-detection, i18n-validation
- Add permissions to: codeql, secret-scan, guardrails, stale
- Add permissions to: requirements-index, monthly-documentation-review
- Move job-level permissions to workflow-level where appropriate

Root cause: Repository default_workflow_permissions is 'read', causing workflows
without explicit permissions to fail immediately with no runner assignment.

This comprehensive fix ensures all 18 workflows have proper permissions blocks,
allowing GitHub Actions to assign runners and execute workflow steps.

--- a/.github/workflows/guardrails.yml
+++ b/.github/workflows/guardrails.yml
@@ -6,6 +6,9 @@ on:
   push:
     branches: [fix/consolidation-guardrails]
 
+permissions:
+  contents: read
+
 jobs:
   check:
     runs-on: ubuntu-latest
