--- a/.github/workflows/requirements-index.yml
+++ b/.github/workflows/requirements-index.yml
@@ -10,6 +10,9 @@ on:
       - "docs/requirements/**"
       - "scripts/build-req-index.mjs"
 
+permissions:
+  contents: read
+
 jobs:
   build:
     runs-on: ubuntu-latest
