fix(ci): Fix GitHub Actions runner assignment issue
- Change ubuntu-latest to ubuntu-22.04 for all workflows
- Add workflow_dispatch trigger to agent-governor.yml for manual testing
- Add checks:write permission for workflows that need it
- Add pull-requests:write permission for duplicate-detection workflow

Root cause: GitHub Actions was not assigning runners to jobs on main branch
This was likely due to missing permissions and runner specification issues

--- a/.github/workflows/agent-governor.yml
+++ b/.github/workflows/agent-governor.yml
@@ -6,14 +6,16 @@ on:
   pull_request:
   push:
     branches: [main, feature/*, develop]
+  workflow_dispatch:
 
 permissions:
   contents: read
   actions: read
+  checks: write
 
 jobs:
   verify:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     env:
       # Secrets are configured in GitHub Settings > Secrets and variables > Actions
       NODE_OPTIONS: --max-old-space-size=8192
