--- a/.github/workflows/duplicate-detection.yml
+++ b/.github/workflows/duplicate-detection.yml
@@ -12,10 +12,11 @@ on:
 
 permissions:
   contents: read
+  pull-requests: write
 
 jobs:
   detect-duplicates:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
       - name: Checkout code
