--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -8,10 +8,11 @@ on:
 
 permissions:
   contents: read
+  checks: write
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     timeout-minutes: 30
 
     strategy:
