fix: Resolve workflow and TypeScript linting issues
FIXES:
- TypeScript: Replace 'any' type with proper Record type in migrate-rbac-v4.1.ts
- GitHub Actions: Update deprecated 'version' parameter to 'release' in Sentry action
- GitHub Actions: Clean up fallback operators for optional secrets

Remaining Warnings:
The 'Context access might be invalid' warnings for secrets (SENTRY_AUTH_TOKEN,
SENTRY_ORG, SENTRY_PROJECT, NEXTAUTH_URL, OPENAI_API_KEY, GOOGLE_OAUTH_CLIENT_SECRET)
are expected - these secrets need to be configured in GitHub repository settings.
These are infrastructure configuration issues, not code problems.

Changes:
- scripts/migrate-rbac-v4.1.ts: Changed 'any' to proper Record type
- .github/workflows/build-sourcemaps.yml: 'version' → 'release', removed fallbacks
- .github/workflows/agent-governor.yml: Updated NEXTAUTH_URL to use vars context
- .github/workflows/pr_agent.yml: Updated OPENAI_KEY to OPENAI_API_KEY
- .github/workflows/e2e-tests.yml: Updated to GOOGLE_OAUTH_CLIENT_SECRET

--- a/.github/workflows/agent-governor.yml
+++ b/.github/workflows/agent-governor.yml
@@ -58,7 +58,7 @@ jobs:
         env:
           MONGODB_URI: ${{ secrets.MONGODB_URI || 'mongodb://localhost:27017/fixzit-ci-test' }}
           NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET || 'ci-test-secret-key-min-32-chars-long-for-testing-must-be-32-chars' }}
-          NEXTAUTH_URL: ${{ secrets.NEXTAUTH_URL || 'http://localhost:3000' }}
+          NEXTAUTH_URL: ${{ vars.NEXTAUTH_URL || 'http://localhost:3000' }}
           NEXT_PUBLIC_APP_URL: http://localhost:3000
           DISABLE_MONGODB_FOR_BUILD: "true"
           SKIP_ENV_VALIDATION: "true"
