docs: Add workflow secrets documentation and VSCode warning suppression
- Add comprehensive WORKFLOW_SECRETS.md explaining all required secrets
- Add WORKFLOW_WARNINGS.md documenting expected VSCode warnings
- Add .github/README.md for quick reference
- Update all workflow files with clear comments about secret handling
- Add VSCode snippets for GitHub Actions secrets
- Configure VSCode settings to reduce noise from workflow warnings

These changes document that workflow secret warnings in VSCode Problems tab
are expected and safe to ignore during local development. Secrets are only
required in production GitHub Actions environment and have proper fallbacks.

--- a/.github/workflows/agent-governor.yml
+++ b/.github/workflows/agent-governor.yml
@@ -1,6 +1,9 @@
 name: Agent Governor CI
 
-# Expected secret warnings documented in: .github/WORKFLOW_SECRETS_DOCUMENTATION.md
+# ℹ️ VSCode Warning Suppression:
+# The "Context access might be invalid" warnings for secrets are EXPECTED and SAFE to ignore.
+# These secrets have fallback values and are only required in production CI/CD.
+# See .github/WORKFLOW_SECRETS.md for details.
 
 on:
   pull_request:
