feat: Add transaction safety to RBAC migration and fix E2E workflow
Migration improvements:
- Implemented full MongoDB transaction support with startSession/commit/abort
- All reads and updates now execute within the transaction scope
- Any error triggers automatic rollback (no partial migrations)
- Errors during migration throw to abort transaction cleanly
- Transaction only applies in live mode (dry-run remains read-only)

Workflow fixes:
- e2e-tests.yml: Fixed Playwright web server command
  - Was: pnpm --dir Fixzit dev (non-existent subfolder)
  - Now: pnpm dev -- --hostname 0.0.0.0 --port 3000
  - Aligns with repo root structure and Playwright config

Benefits:
- Zero risk of partial migrations leaving database in inconsistent state
- Automatic rollback on any update failure
- Proper session management with endSession in finally block
- E2E tests can now start dev server correctly in CI

Validation:
✅ pnpm run typecheck - 0 errors
✅ pnpm run lint - 0 errors
✅ Transaction logic verified with proper try/catch/finally

Next steps:
- Run E2E tests in CI to verify workflow fix
- Consider batching for large datasets (500 users/txn) if needed

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -72,7 +72,7 @@ jobs:
     env:
       NODE_OPTIONS: --max-old-space-size=4096
       PLAYWRIGHT_CONFIG: tests/playwright.config.ts
-      PW_WEB_SERVER: pnpm --dir Fixzit dev
+      PW_WEB_SERVER: pnpm dev -- --hostname 0.0.0.0 --port 3000
       PW_WEB_PORT: 3000
       PLAYWRIGHT_BROWSERS_PATH: 0
       
