fix(test): Tests, Scripts & Tooling Updates
## PR 7: Tests, Scripts & Tooling

### Test Files
- api/ats/applications.route.test.ts: ATS applications tests
- api/ats/interviews.route.test.ts: ATS interviews tests
- api/souq/claims.test.ts: Souq claims tests
- server/hr/leave-types.route.test.ts: HR leave types tests
- unit/api/fm/properties/route.test.ts: FM properties tests
- unit/components/ClientLayout.test.tsx: Layout tests
- unit/components/__tests__/TopBar.test.tsx: TopBar tests
- hooks/useFMPermissions.test.ts: Permissions hook tests
- paytabs.test.ts: PayTabs integration tests
- setup-auth.ts: Auth setup utilities
- generate-admin-auth.ts: Admin auth generation
- components/*: New component tests
- hooks/*: New hook tests
- unit/security/*: New security tests

### Test State Files
- state/*.json: Updated test user states

### Scripts
- migrate-rbac-v4.1.ts: RBAC migration script
- seed-e2e-test-users.ts: E2E test user seeding
- seed-production-data.ts: Production data seeding
- seed-test-users.js: Test user seeding
- setup-dev.sh: Dev setup script
- test-api-endpoints.ts: API endpoint tests
- security/test-rate-limiting.sh: Rate limiting tests
- fix-superadmin-login.ts: Superadmin fix
- migrate-encrypt-pii.ts: PII encryption migration
- quick-fix-superadmin.ts: Quick superadmin fix
- (deleted) apply_sql_migrations.py
- (deleted) fix-schema-mismatch.sh
- (deleted) generate-fixzit-postgresql.sh

### Tools
- generators/create-guardrails.js: Guardrails generator

### Lib
- __tests__/*: New lib tests
- schemas/*: Validation schemas
- security/encryption.ts: PII encryption

### Config
- package.json: Dependencies
- pnpm-lock.yaml: Lockfile
- next-env.d.ts: Next.js types
- .env.example: Environment example

--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,24 @@ NEXTAUTH_URL=http://localhost:3000
 # MUST be different in production - keep this secret!
 NEXTAUTH_SECRET=your-secret-key-here-change-in-production
 
+# OTP/SMS Verification for login
+# Set to 'false' to disable OTP requirement (development only)
+# In production, always keep this enabled for security
+NEXTAUTH_REQUIRE_SMS_OTP=true
+
+ # Allow super admin to bypass OTP in development ONLY
+# ⚠️  SECURITY: This ONLY works when NODE_ENV !== 'production'
+# Production deployments will ALWAYS require OTP regardless of this setting
+# ⚠️  DEFAULT: false - require explicit opt-in per environment for security
+# Set to 'true' ONLY in local development if needed
+NEXTAUTH_SUPERADMIN_BYPASS_OTP=false
+
+# Fallback phone number for super admin (development/testing only)
+# Used when super admin account doesn't have a phone number set
+# ⚠️  REPLACE with your test number in local .env.local (not committed)
+# ⚠️  DO NOT deploy with placeholder - OTP sending will fail
+NEXTAUTH_SUPERADMIN_FALLBACK_PHONE=+966XXXXXXXXX
+
 # -----------------------------------------------------------------------------
 # OAUTH PROVIDERS (OPTIONAL - but recommended for production)
 # -----------------------------------------------------------------------------
