docs: CI/CD Workflows & Documentation Updates
## PR 8: CI/CD & Documentation

### GitHub Workflows
- workflows/agent-governor.yml: Agent governance workflow
- workflows/build-sourcemaps.yml: Sourcemaps build
- workflows/e2e-tests.yml: E2E test workflow
- workflows/pr_agent.yml: PR agent workflow

### Documentation
- WORKFLOW_SECRETS.md: Workflow secrets guide
- CATEGORIZED_TASKS_LIST.md: Task categorization

### New Documentation Files
- CELEBRATION.md: Milestone celebration
- EXECUTIVE_SUMMARY.md: Executive summary
- FINAL_REMEDIATION_REPORT.md: Final remediation
- PII_ENCRYPTION_REPORT.md: PII encryption docs
- PROGRESS_DASHBOARD.md: Progress tracking
- QUANTITATIVE_VALIDATION_REPORT.md: Validation metrics
- RBAC_V4_1_DEPLOYMENT.md: RBAC deployment guide
- STEPS_3_5_COMPLETE.md: Steps completion
- STEPS_3_5_SUMMARY.md: Steps summary
- STEP_2_AUDIT_LOGGING_COMPLETE.md: Audit logging

### Root Documentation
- AUDIT_COMPLIANCE_REPORT_2025-11-25.md
- AUDIT_REMEDIATION_COMPLETE.md
- AUDIT_RESPONSE_SUMMARY.md
- COMPREHENSIVE_ISSUES_AUDIT.md
- FM_RBAC_MULTI_TENANCY_FIXES.md
- P2_DOCUMENTATION_CLEANUP_COMPLETE.md
- POST_STABILIZATION_AUDIT_FIXES.md
- PR_REVIEW_CATEGORIZED_FILES.md
- REALITY_CHECK_FIXES_COMPLETE.md
- REMAINING_WORK_GUIDE.md
- SYSTEM_ANALYSIS_AND_ACTION_PLAN.md
- SYSTEM_FIXES_PR_SUMMARY.md
- SYSTEM_REMEDIATION_COMPLETE.md
- SYSTEM_REMEDIATION_REPORT_2025-11-25.md

--- a/.github/workflows/agent-governor.yml
+++ b/.github/workflows/agent-governor.yml
@@ -51,17 +51,31 @@ jobs:
         run: pnpm run lint
         # CRITICAL: Removed continue-on-error - lint failures must block PRs
 
-      # Note: No test script exists in package.json - placeholder tests use Playwright e2e
-      # E2E tests are expensive and run separately, so we skip unit tests here for now
-      # TODO: Add unit test script with Jest or Vitest when unit tests are implemented
-      # - name: Run tests
-      #   run: pnpm run test --if-present
+      - name: Run RBAC v4.1 Tests
+        run: |
+          echo "🔒 Running STRICT v4.1 RBAC validation tests..."
+          pnpm vitest run tests/domain/fm.behavior.v4.1.test.ts --reporter=dot || {
+            echo "❌ RBAC tests failed! Blocking build."
+            exit 1
+          }
+          echo "✅ All 41 RBAC tests passing"
+      
+      - name: Run SubRoleSelector Component Tests
+        run: |
+          echo "🧪 Running SubRoleSelector integration tests..."
+          pnpm vitest run tests/components/admin/SubRoleSelector.test.tsx --reporter=dot || {
+            echo "❌ Component tests failed!"
+            exit 1
+          }
+          echo "✅ All 17 component tests passing"
+
+      # Note: E2E tests are expensive and run separately in e2e-tests.yml workflow
       
       - name: Build project
         env:
           MONGODB_URI: ${{ secrets.MONGODB_URI || 'mongodb://localhost:27017/fixzit-ci-test' }}
           NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET || 'ci-test-secret-key-min-32-chars-long-for-testing-must-be-32-chars' }}
-          NEXTAUTH_URL: ${{ vars.NEXTAUTH_URL || 'http://localhost:3000' }}
+          NEXTAUTH_URL: ${{ secrets.NEXTAUTH_URL || 'http://localhost:3000' }}
           NEXT_PUBLIC_APP_URL: http://localhost:3000
           DISABLE_MONGODB_FOR_BUILD: "true"
           SKIP_ENV_VALIDATION: "true"
