--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,11 @@ Thumbs.db
 *.emergency-bak
 duplicate-detection-report.json
 
+# Duplicate files (created by OS when copying)
+*\ (1)*
+*\ (2)*
+*\ (3)*
+
 # Temp directories (prevent tracking temporary files)
 /tmp/
 /.tmp/
