fix: comprehensive security, API validation & UX improvements
SECURITY (SEC-1 to SEC-6):
- Use timingSafeEqual for HMAC signature comparison (email verification)
- Add RBAC gates to admin pages (onboarding, audit-logs, claims)
- Validate JWT payload 'sub' before signing (post-login)
- Remove email from password reset logs (PII protection)

API (API-1 to API-4):
- Validate ObjectId format in billing/history before MongoDB query
- Validate additionalModules against plan's allowedAddons (upgrade)
- Validate PriceBook selection exists and matches currency
- Handle JSON parse errors in checkout/complete

BUGS (BUG-1, BUG-2):
- Fix off-by-one in feature gating limit check (< to <=)
- Fix seller onboarding: set SUBMITTED status after doc upload

UX (UX-1 to UX-3):
- Convert pricing page plan field from text input to dropdown
- Remove required attribute from vendor apply services field
- Use NEXT_PUBLIC flags for OAuth providers (not server secrets)

i18n (I18N-1 to I18N-4):
- Add translation keys to TrialBanner component
- Structure trial.banner keys in en.json and ar.json
- Fix language-options.ts: fr/es had incorrect language codes

PERFORMANCE (PERF-1, PERF-2):
- Wrap UpgradePrompt feature/plan name objects in useMemo
- Move FEATURE_REQUIREMENTS import to top-level in useSubscription

REFACTOR:
- Convert OnboardingWizard uploadedDocs from array to Record
- Add 5MB file size validation to document uploads
- Improve S3 upload error handling

CONFIG:
- Make payment provider check warning-based (support Tap OR PayTabs)
- Update CI verify-prod-env.js to match next.config.js logic

STYLE:
- Fix indentation in billing/history route validation blocks

Fixes: 26 issues identified in comprehensive audit

--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "artifacts:init": "mkdir -p _artifacts",
     "reports:clean": "node -e \"require('fs').rmSync('_artifacts', {recursive:true, force:true}); require('fs').mkdirSync('_artifacts', {recursive:true});\"",
     "pack:reports": "npm run artifacts:init && tar -czf _artifacts/reports-$(date +%Y%m%d-%H%M%S).tar.gz _artifacts || true",
+    "test:stable": "pnpm exec vitest run --reporter=dot --maxWorkers=1 --fileParallelism=false",
     "clean:root": "tsx scripts/janitor.ts --apply",
     "bundle:check": "webpack --config webpack.config.js --mode=production",
     "seed:marketplace": "tsx scripts/seed-marketplace.ts",
