chore: organize files and add client-side RBAC utilities
- Add lib/rbac/client-roles.ts for client-side role utilities
- Add lib/aqar/client-types.ts for Aqar client types
- Add lib/souq/review-types.ts for Souq review types
- Add scripts/rbac/generate-client-roles.ts for RBAC generation
- Update various components and services

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lint:prod:fix": "eslint app components lib services --ext .ts,.tsx,.js,.jsx --fix",
     "lint:prod:baseline": "eslint app components lib services --ext .ts,.tsx,.js,.jsx --format json -o _artifacts/eslint-baseline.json",
     "lint:scripts": "eslint scripts tools --ext .ts,.tsx,.js,.jsx",
-    "lint:ci": "npm run lint:prod && npm run typecheck",
+    "lint:ci": "npm run lint:prod && npm run rbac:client:check && npm run typecheck",
     "lint:next": "next lint",
     "lint:rtl": "node scripts/check-rtl-logical.js",
     "style:scan": "node scripts/scan-hex.js",
@@ -124,6 +124,8 @@
     "mongo:normalize:apply": "tsx scripts/mongo/normalize_org_ids.ts --apply",
     "guardrails:all": "npm run sidebar:snapshot && npm run ui:freeze:check && npm run i18n:check && npm run consolidate:dry",
     "check:mock-flags": "node scripts/check-mock-flags.js",
+    "rbac:client:generate": "tsx scripts/rbac/generate-client-roles.ts",
+    "rbac:client:check": "tsx scripts/rbac/generate-client-roles.ts --check",
     "lint:md": "markdownlint \"**/*.md\" \"!node_modules\" \"!.next\"",
     "lint:md:fix": "markdownlint --fix \"**/*.md\" \"!node_modules\" \"!.next\"",
     "guard:fm-hooks": "node -e \"const {execSync} = require('child_process'); try { const result = execSync('grep -rn \\'eslint-disable react-hooks/rules-of-hooks\\' app/fm 2>/dev/null || true', {encoding: 'utf8'}); if (result.trim()) { console.log('❌ Found react-hooks/rules-of-hooks disables in app/fm (use FmGuardedPage)'); process.exit(1); } } catch(e) { }\"",
@@ -237,6 +239,8 @@
     "chalk": "^4.1.2",
     "concurrently": "^9.2.1",
     "cross-env": "^10.1.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-plugin-import": "^2.31.0",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "fast-glob": "^3.3.3",
