--- a/.github/workflows/build-sourcemaps.yml
+++ b/.github/workflows/build-sourcemaps.yml
@@ -1,10 +1,5 @@
 name: Build & Upload Sourcemaps (Sentry)
 
-# ℹ️ VSCode Warning Suppression:
-# The "Context access might be invalid" warnings for secrets are EXPECTED and SAFE to ignore.
-# These secrets are only required in production CI/CD (GitHub Actions) and have proper fallbacks.
-# See .github/WORKFLOW_SECRETS.md for details.
-
 on:
   push:
     branches: ["main", "develop"]
@@ -22,15 +17,13 @@ jobs:
   build-upload:
     runs-on: ubuntu-latest
     env:
-      # Secrets are configured in GitHub Settings > Secrets and variables > Actions
-      # ℹ️ SENTRY_* secrets are OPTIONAL - workflow continues without them
-      # VSCode warnings about these secrets can be safely ignored
       CI: "true"
       NODE_OPTIONS: --max-old-space-size=8192
       NEXT_TELEMETRY_DISABLED: "1"
-      # Sentry configuration (optional - gracefully skipped if not configured)
-      SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN || '' }}
-      SENTRY_ORG: ${{ secrets.SENTRY_ORG || '' }}
+      # Sentry configuration (now required and provisioned in repo secrets)
+      SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+      SENTRY_ORG: ${{ secrets.SENTRY_ORG }}
+      SENTRY_PROJECT: ${{ secrets.SENTRY_PROJECT }}
       # expose release to build/runtime; SDKs read SENTRY_RELEASE
       SENTRY_RELEASE: ${{ github.sha }}
 
@@ -71,7 +64,7 @@ jobs:
           environment: ${{ github.ref == 'refs/heads/main' && 'production' || 'staging' }}
           # v3 uses 'release' for the release name
           release: ${{ github.sha }}
-          projects: ${{ secrets.SENTRY_PROJECT || 'fixzit-frontend' }}
+          projects: ${{ env.SENTRY_PROJECT || 'fixzit-frontend' }}
           # Upload all Next.js client/server maps; v3 injects Debug IDs by default
           sourcemaps: .next
           url_prefix: "~/_next"
