--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -1,10 +1,5 @@
 name: E2E Tests (Playwright)
 
-# ℹ️ VSCode Warning Suppression:
-# The "Context access might be invalid" warnings for secrets are EXPECTED and SAFE to ignore.
-# These secrets have fallback generation for forked PRs and are only required in production.
-# See .github/WORKFLOW_SECRETS.md for details.
-
 on:
   pull_request:
     branches: [main, develop]
@@ -168,12 +163,9 @@ jobs:
 
       - name: Prepare E2E env vars
         env:
-          # ℹ️ Secrets: Configure in GitHub Settings > Secrets (production CI only)
-          # VSCode warnings can be safely ignored - fallbacks provided below
           NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
-          # Google OAuth secrets are OPTIONAL - tests skip OAuth if not configured
-          GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID || '' }}
-          GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET || '' }}
+          GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
+          GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
         run: |
           if [ "${{ github.event_name }}" = "pull_request" ] && [ "${{ github.event.pull_request.head.repo.fork }}" = "true" ]; then
             echo "Using generated secrets for forked PR (GitHub secrets are unavailable)."
