fix(security): Add salted hashing for monitoring keys to prevent dictionary reversal
AUDIT ISSUE: Unsalted FNV-1a hashes in monitoring keys could be reversed
via dictionary attacks if monitoring data (logs, webhooks) is leaked.

Changes:
- Added MONITORING_HASH_SALT env var (falls back to LOG_HASH_SALT)
- Updated hashIdentifier() to auto-load salt from environment
- Updated monitoring.ts comments to document salt behavior
- Added env validation for MONITORING_HASH_SALT
- Added unit tests for salted hashing security properties
- Updated generator template with salt documentation

Security model:
- Production: Uses MONITORING_HASH_SALT or LOG_HASH_SALT (required)
- Development: Falls back to empty salt (functional but not secure)
- ENV validation scripts catch missing salts at deploy time

Files changed:
- env.example: Added MONITORING_HASH_SALT
- lib/otp-utils.ts: Added getMonitoringSalt(), updated hashIdentifier()
- lib/security/monitoring.ts: Updated comments
- scripts/check-vercel-env.ts: Added MONITORING_HASH_SALT check
- scripts/security/configure-monitoring.ts: Updated template docs
- tests/unit/lib/otp-utils.test.ts: Added salt security tests
- tests/unit/lib/security-monitoring.test.ts: Added salt behavior tests

--- a/env.example
+++ b/env.example
@@ -273,6 +273,12 @@ GOOGLE_CLIENT_SECRET=your_google_client_secret_here
 # Generate: openssl rand -hex 32
 LOG_HASH_SALT=
 
+# Salt for hashing identifiers in security monitoring keys
+# Prevents dictionary reversal attacks if monitoring data is leaked
+# If not set, falls back to LOG_HASH_SALT, then to no salt (dev only)
+# Generate: openssl rand -hex 32
+MONITORING_HASH_SALT=
+
 # === OAUTH CONFIGURATION ===
 # Comma-separated list of allowed email domains for OAuth sign-in
 # Example: OAUTH_ALLOWED_DOMAINS="fixzit.com,fixzit.co,example.com"
