fix(rbac): Align PLAN_GATES parity + add lint:rbac script
- Fixed PLAN_GATES drift in fm.types.ts (4 mismatches vs server):
  - STANDARD: ADMIN_FACILITIES false (was true)
  - STANDARD: MARKETPLACE_REQUESTS false (was true)
  - STANDARD: SUPPORT_CHAT false (was true)
  - PRO: ADMIN_DOA true (was false)
- Added scripts/lint-rbac-parity.ts to prevent future RBAC drift
- Added pnpm lint:rbac command to package.json
- Server (fm.behavior.ts) is canonical source of truth

Verified:
- lint:rbac: All 7 parity checks pass
- Parity tests: 43/43 passing
- TypeScript: 0 errors

Resolves RBAC-DRIFT-010 (PLAN_GATES server/client mismatch)

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lint:ci": "npm run lint:prod && npm run rbac:client:check && npm run typecheck",
     "lint:next": "next lint",
     "lint:rtl": "node scripts/check-rtl-logical.js",
+    "lint:rbac": "npx tsx scripts/lint-rbac-parity.ts",
     "style:scan": "node scripts/scan-hex.js",
     "typecheck": "tsc -p .",
     "type-check:last": "node scripts/typecheck-tail.mjs",
