--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "lint:mongo-unwrap": "node tools/check-mongo-unwrap.js",
     "lint:prod:baseline": "eslint app components lib services --ext .ts,.tsx,.js,.jsx --format json -o _artifacts/eslint-baseline.json",
     "lint:scripts": "eslint scripts tools --ext .ts,.tsx,.js,.jsx",
-    "lint:ci": "npm run lint:prod && npm run rbac:client:check && npm run typecheck",
+    "lint:ci": "npm run lint:prod && npm run rbac:client:check && npm run lint:rbac && npm run typecheck",
     "lint:next": "next lint",
     "lint:rtl": "node scripts/check-rtl-logical.js",
     "lint:rbac": "npx tsx scripts/lint-rbac-parity.ts",
