fix(e2e): tighten RBAC assertions and wire TEST_* secrets to CI
AUDIT FIXES (2025-11-30):

1. expectAllowedOrEmpty hardening:
   - Explicit checks for 401 (auth failure) and 500 (server error)
   - Clear diagnostic messages for each failure type
   - Backend TODO logging for 404 responses

2. TEAM_MEMBER work orders test fix:
   - Previously accepted [200, 403, 404] - was a no-op
   - Now uses expectAllowedOrEmpty which rejects 403
   - Can now detect RBAC over/under-permission

3. Method restriction tests:
   - DELETE test now expects [403, 405] only, not 404
   - Detects security-through-obscurity (404 instead of 403)
   - Uses descriptive test IDs (rbac-test-nonexistent)

4. Payroll approve test:
   - Provides minimal payload to avoid 400 masking permissions
   - Rejects 401 and 500 explicitly
   - Logs actual RBAC behavior for documentation

5. CI secrets wired:
   - Added all TEST_* env vars to e2e-tests.yml
   - Mapped to GitHub Secrets for secure credential handling
   - Subrole API access tests can now run in CI

Files changed:
- tests/e2e/subrole-api-access.spec.ts
- .github/workflows/e2e-tests.yml

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -219,6 +219,24 @@ jobs:
           # Base URL
           BASE_URL: http://localhost:3000
           
+          # ============================================================
+          # E2E RBAC Test Credentials (Required for subrole-api-access.spec.ts)
+          # These must be configured in GitHub Settings > Secrets
+          # See env.example for documentation on creating test users
+          # ============================================================
+          TEST_FINANCE_OFFICER_EMAIL: ${{ secrets.TEST_FINANCE_OFFICER_EMAIL }}
+          TEST_FINANCE_OFFICER_PASSWORD: ${{ secrets.TEST_FINANCE_OFFICER_PASSWORD }}
+          TEST_HR_OFFICER_EMAIL: ${{ secrets.TEST_HR_OFFICER_EMAIL }}
+          TEST_HR_OFFICER_PASSWORD: ${{ secrets.TEST_HR_OFFICER_PASSWORD }}
+          TEST_SUPPORT_AGENT_EMAIL: ${{ secrets.TEST_SUPPORT_AGENT_EMAIL }}
+          TEST_SUPPORT_AGENT_PASSWORD: ${{ secrets.TEST_SUPPORT_AGENT_PASSWORD }}
+          TEST_OPERATIONS_MANAGER_EMAIL: ${{ secrets.TEST_OPERATIONS_MANAGER_EMAIL }}
+          TEST_OPERATIONS_MANAGER_PASSWORD: ${{ secrets.TEST_OPERATIONS_MANAGER_PASSWORD }}
+          TEST_TEAM_MEMBER_EMAIL: ${{ secrets.TEST_TEAM_MEMBER_EMAIL }}
+          TEST_TEAM_MEMBER_PASSWORD: ${{ secrets.TEST_TEAM_MEMBER_PASSWORD }}
+          TEST_ADMIN_EMAIL: ${{ secrets.TEST_ADMIN_EMAIL }}
+          TEST_ADMIN_PASSWORD: ${{ secrets.TEST_ADMIN_PASSWORD }}
+          
         run: |
           project_arg=""
           test_path_arg=""
