fix(e2e): Add tenant-scoped body validation and RBAC E2E CI job
TENANT BODY VALIDATION (Multi-Tenancy Security):
- Convert all 'allowed' tests to use expectAllowedWithBodyCheck
- Add expectedOrgId option to verify org_id in API responses
- Add getTestOrgId() and getTestOrgIdOptional() to credentials.ts
- This catches cross-tenant data leaks that status-only checks miss

CREDENTIALS SYSTEM (credentials.ts):
- Add getTestOrgId() - throws if TEST_ORG_ID not configured
- Add getTestOrgIdOptional() - returns undefined if not set
- Document TEST_ORG_ID requirement for multi-tenancy validation

CI WORKFLOW IMPROVEMENTS:
- Add rbac-e2e job to fixzit-quality-gates.yml
- Triggers: nightly schedule, 'run-rbac-e2e' label, manual dispatch
- Wires all TEST_* secrets including TEST_ORG_ID
- Comprehensive reporting and PR comments on failure
- Add TEST_ORG_ID to e2e-tests.yml

ENVIRONMENT (env.example):
- Document TEST_ORG_ID for tenant-scoped E2E tests
- Explain its role in preventing cross-tenant data leaks

SECURITY AUDIT ITEMS RESOLVED:
- Major: 'allowed' tests now validate tenant/org scoping
- Major: CI now runs RBAC E2E tests (nightly + opt-in)
- Pattern: All endpoints use expectAllowedWithBodyCheck

Resolves: E2E tenant validation audit findings from 2025-11-30

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -237,6 +237,9 @@ jobs:
           TEST_ADMIN_EMAIL: ${{ secrets.TEST_ADMIN_EMAIL }}
           TEST_ADMIN_PASSWORD: ${{ secrets.TEST_ADMIN_PASSWORD }}
           
+          # Multi-tenancy validation (org_id scoping for data isolation checks)
+          TEST_ORG_ID: ${{ secrets.TEST_ORG_ID }}
+          
         run: |
           project_arg=""
           test_path_arg=""
