--- a/env.example
+++ b/env.example
@@ -531,6 +531,15 @@ TEST_ADMIN_EMAIL=
 TEST_ADMIN_PASSWORD=
 
 # =============================================================================
+# MULTI-TENANCY VALIDATION
+# =============================================================================
+# Required for tenant-scoped E2E tests to verify data isolation
+# Set this to your test organization's MongoDB ObjectId
+# Used by expectAllowedWithBodyCheck() to validate org_id in API responses
+# This catches cross-tenant data leaks that status-only checks miss
+TEST_ORG_ID=
+
+# =============================================================================
 # NOTES
 # =============================================================================
 # 1. Copy this file to .env.local for development
