--- a/env.example
+++ b/env.example
@@ -509,26 +509,33 @@ LOG_LEVEL=info               # Options: error, warn, info, verbose, debug
 # Finance Officer (access to finance module APIs)
 TEST_FINANCE_OFFICER_EMAIL=
 TEST_FINANCE_OFFICER_PASSWORD=
+TEST_FINANCE_OFFICER_EMPLOYEE=
 
 # HR Officer (access to HR module APIs)
 TEST_HR_OFFICER_EMAIL=
 TEST_HR_OFFICER_PASSWORD=
+TEST_HR_OFFICER_EMPLOYEE=
 
 # Support Agent (access to support/tickets APIs)
 TEST_SUPPORT_AGENT_EMAIL=
 TEST_SUPPORT_AGENT_PASSWORD=
+TEST_SUPPORT_AGENT_EMPLOYEE=
 
 # Operations Manager (access to work orders, properties, marketplace APIs)
 TEST_OPERATIONS_MANAGER_EMAIL=
 TEST_OPERATIONS_MANAGER_PASSWORD=
+TEST_OPERATIONS_MANAGER_EMPLOYEE=
 
 # Team Member without sub-role (limited access, used for negative tests)
 TEST_TEAM_MEMBER_EMAIL=
 TEST_TEAM_MEMBER_PASSWORD=
+TEST_TEAM_MEMBER_EMPLOYEE=
 
 # Admin user (full access to all modules)
 TEST_ADMIN_EMAIL=
 TEST_ADMIN_PASSWORD=
+# Admin employee number (required for employee-number login test in auth.spec.ts)
+TEST_ADMIN_EMPLOYEE=
 
 # =============================================================================
 # MULTI-TENANCY VALIDATION
